# mighty

./: .gitattributes  CMakeLists.txt  README.md  package.xml  setup.sh
benchmarking/: collision_checker.py  dynamic_obstacle_benchmark_node.py  dynamic_obstacle_collision_checker.py  static_forest_viz.ipynb  unc_benchmark_data_analysis.ipynb  unc_benchmark_node.py
config/: mighty.yaml
docker/: Dockerfile  Makefile  mighty.sh
include/dgp/: dgp_manager.hpp  dgp_planner.hpp  graph_search.hpp  map_util.hpp  utils.hpp
include/mighty/: convert_goal_to_cmd_vel.hpp  convert_odom_to_state.hpp  convert_vicon_to_state.hpp  initial_guess.hpp  lbfgs.hpp  lbfgs_solver.hpp  lbfgs_solver_utils.hpp  mighty.hpp  mighty_node.hpp  mighty_type.hpp  obstacle_tracker_node.hpp  utils.hpp
launch/: base_mighty.launch.py  convert_goal_cmd_vel.launch.py  convert_odom_to_state.launch.py  convert_vicon_to_state.launch.py  docker_mighty_sim.yaml  dyn_obstacles.launch.py  goal_monitor.launch.py  goal_sender.launch.py  mighty_sim.yaml  onboard_mighty.launch.py  run_mighty_sim.sh  run_single_sim.py
mighty/: CMakeLists.txt  package.xml
mighty/config/: mighty.rviz  mighty.yaml
mighty/include/gcopter/: gcopter.hpp  sfc_gen.hpp  voxel_map.hpp
mighty/include/mighty/: mighty_solver.hpp  mighty_type.hpp
mighty/include/misc/: visualizer.hpp
mighty/launch/: mighty.launch.py
mighty/src/: mighty.cpp  mighty_solver.cpp
rviz/: dynus_px01_hardware.rviz  dynus_px03_hardware.rviz  mighty.rviz
scripts/: convert_goal_to_cmd_vel.py  convert_odom_to_state.py  convert_vicon_to_state.py  generate_random_forest.py  goal_monitor_node.py  goal_sender.py
src/dgp/: dgp_manager.cpp  dgp_planner.cpp  graph_search.cpp  utils.cpp
src/mighty/: convert_goal_to_cmd_vel.cpp  convert_odom_to_state.cpp  convert_velodyne_to_ros_time.cpp  convert_vicon_to_state.cpp  fake_dynamic_obstacles.cpp  fake_sim.cpp  lbfgs_solver.cpp  lbfgs_solver_utils.cpp  mighty.cpp  mighty_node.cpp  obstacle_tracker_node.cpp  utils.cpp
src/test/: test_lbfgs_solver.cpp
urdf/: _d435.urdf.xacro  _d435i.urdf.xacro  _t265.urdf.xacro  dyn_obstacle1.urdf.xacro  p3at.urdf.xacro  p3at_manual.urdf  pioneer3at_body.urdf.xacro  quadrotor.urdf.xacro  quadrotor_base.urdf.xacro  sonar_sensor.urdf.xacro
